<resources>
    <string name="app_name">justMath</string>
    <string name="textview1">TextView</string>
    <string name="textview">TextView</string>
    <string name="just_math">Just Math</string>
    <string name="share">share</string>
    <string name="start">start</string>
    <string name="correct">Wrong</string>
    <string name="wrong">Correct</string>
    <string name="basicmath">BasicMath</string>
    <string name="score">Score:</string>
</resources>